--- a/css/products.css
+++ b/css/products.css
@@ -345,7 +345,7 @@ body {
         color: rgba(0, 0, 0, 0.7);
     }
     .product-popup {
-        display: none; /* Hidden by default */
+        display: none!important; /* Hidden by default */
         position: fixed;
         z-index: 1000;
         left: 0;
@@ -996,6 +996,9 @@ body {
     .section-2-comparison-container-spaced {
         width: 80%;
     }
+    .section-2-comparison-container {
+        width: 80%;
+    }
     .section-2-catch-button-container {
         width: 50%;
         display: flex;
@@ -1084,6 +1087,20 @@ body {
         font-size: 1.6vw;
         text-align: left;
         color: rgba(0, 0, 0, 0.7);
+    }
+    .product-popup {
+        display: none!important; /* Hidden by default */
+        position: fixed;
+        z-index: 1000;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        overflow: auto;
+        background-color: rgba(0, 0, 0, 0.4); /* Black with opacity */
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
     .section-2-demo-button {
         text-decoration: none;
@@ -1675,6 +1692,9 @@ body {
     .section-2-comparison-container-spaced {
         width: 80%;
     }
+    .section-2-comparison-container {
+        width: 80%;
+    }
     .section-2-catch-button-container {
         width: 50%;
         display: flex;
@@ -1763,6 +1783,20 @@ body {
         font-size: 3.2vw;
         text-align: left;
         color: rgba(0, 0, 0, 0.7);
+    }
+    .product-popup {
+        display: none!important; /* Hidden by default */
+        position: fixed;
+        z-index: 1000;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        overflow: auto;
+        background-color: rgba(0, 0, 0, 0.4); /* Black with opacity */
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
     .section-2-demo-button {
         text-decoration: none;
